# urocissa

./: .gitignore  200.html  404.html  LICENSE  README.md  TEST_PLAN_LOCAL_UPLOAD.md  _payload.json  build_installer.ps1  build_linux_binary.ps1  index.html  run_urocissa_docker.sh
gallery-backend/: Cargo.toml  build.rs  installer.nsi
gallery-backend/src/: main.rs  migration.rs
gallery-backend/src/migration/: config.rs  database.rs  mod.rs  old_structure.rs  v2_schema.rs  v2_v3.rs  v3_0_schema.rs  v3_schema.rs  v3_v4.rs
gallery-backend/src/operations/: io.rs  mod.rs
gallery-backend/src/operations/hash/: mod.rs
gallery-backend/src/operations/indexation/: analysis.rs  fix_orientation.rs  generate_compressed_video.rs  generate_dynamic_image.rs  generate_exif.rs  generate_image_hash.rs  generate_thumbnail.rs  generate_width_height.rs  mod.rs
gallery-backend/src/operations/initialization/: ffmpeg.rs  folder.rs  logger.rs  mod.rs  redb.rs
gallery-backend/src/operations/open_db/: mod.rs
gallery-backend/src/operations/open_file/: mod.rs
gallery-backend/src/operations/transitor/: mod.rs
gallery-backend/src/operations/utils/: timestamp.rs
gallery-backend/src/process/: info.rs  initialization.rs  io.rs  transitor.rs
gallery-backend/src/public/: embedded.rs  error.rs  error_data.rs  mod.rs  tui.rs
gallery-backend/src/public/constant/: mod.rs  ser_de.rs  storage.rs
gallery-backend/src/public/structure/: abstract_data.rs  config.rs  mod.rs  object.rs
gallery-backend/src/router/: builder.rs  config.rs  mod.rs
gallery-backend/src/router/claims/: claims.rs  claims_hash.rs  claims_timestamp.rs  mod.rs
gallery-backend/src/router/delete/: delete_data.rs
gallery-backend/src/router/fairing/: auth_utils.rs  guard_auth.rs  guard_hash.rs  guard_read_only_mode.rs  guard_share.rs  guard_timestamp.rs  guard_upload.rs  mod.rs
gallery-backend/src/router/get/: get_config.rs  get_data.rs  get_export.rs  get_fs_completion.rs  get_img.rs  get_list.rs  get_page.rs  get_prefetch.rs  mod.rs
gallery-backend/src/router/post/: authenticate.rs  create_album.rs  create_share.rs  import_config.rs  mod.rs  post_upload.rs  post_upload_local.rs
gallery-backend/src/router/put/: edit_album.rs  edit_config.rs  edit_description.rs  edit_flags.rs  edit_share.rs  edit_tag.rs  mod.rs  random.rs  regenerate_thumbnail.rs  reindex.rs  rotate_image.rs
gallery-backend/src/tasks/actor/: album.rs  copy.rs  deduplicate.rs  delete_in_update.rs  index.rs  open_file.rs  remove_tree_snapshot.rs  video.rs
gallery-backend/src/tasks/batcher/: expire_check.rs  flush_tree.rs  flush_tree_snapshot.rs  start_watcher.rs  update_expire.rs  update_tree.rs
gallery-backend/src/workflow/: mod.rs
gallery-wasm/: Cargo.toml  GUIDE.md  build_and_copy.js  package.json
gallery-wasm/src/: image_processing.rs  lib.rs
(+259 files in other folders)
