[package]
name = "urocissa"
version = "1.0.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[profile.dev-release]
inherits = "release"
lto = false

[profile.static-release]
inherits = "release"
lto = true

[profile.static-dev]
inherits = "release"
lto = false

[dependencies]
anyhow = "1.0.100"
arrayvec = { version = "0.7.6", features = ["serde"] }
atomic_float = "1.1.0"
bitcode = { version = "0.6.9", features = ["arrayvec"] }
blake3 = "1.8.3"
bytesize = "2.3.1"
chrono = "0.4.42"
console = "0.16.2"
crossbeam-queue = "0.3.12"
dashmap = { version = "6.1.0", features = ["rayon"] }
dotenv = "0.15.0"
env_logger = { version = "0.11.8", features = ["humantime", "color"] }
envy = "0.4.2"
filetime = "0.2.26"
futures = "0.3.31"
figment = { version = "0.10", features = ["json"] }
image = "0.25.9"
image_hasher = "3.0.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
kamadak-exif = "0.6.1"
log = { version = "0.4.29", features = ["kv"] }
mini_executor = "2.0.3"
notify = "8.2.0"
num_cpus = "1.17.0"
path-clean = "1.0.1"
rand = "0.9.2"
rayon = "1.11.0"
redb = "3.1"
redb-old = { package = "redb", version = "2.6.3" }
regex = "1.12.2"
reqwest = { version = "0.13.1", default-features = false, features = [
    "json",
    "blocking",
    "native-tls",
    "http2",
    "charset",
] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_seek_stream = "0.2.6"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
superconsole = "0.2.0"
terminal_size = "0.4.3"
thumbhash = "0.1.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-rayon = "2.1.0"
toml = "0.9"
unicode-width = "0.2.2"
uuid = { version = "1.19.0", features = ["v4"] }
walkdir = "2.5.0"
base64 = "0.22.1"
directories = "6.0.0"
zip = "7.0.0"
webbrowser = { version = "1.0.6", optional = true }
rust-embed = "8.9.0"
mime_guess = "2.0.5"

[build-dependencies]
winres = "0.1"

[features]
embed-frontend = []
auto-open-browser = ["dep:webbrowser"]
