[package]
name = "gallery-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
kamadak-exif = "0.5"
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
thumbhash = "0.1"
image_hasher = "2.0"
console_error_panic_hook = "0.1"
blake3 = { version = "1.8.3", features = ["pure"] }

[features]
console_error_panic_hook = []

[profile.release]
lto = true
opt-level = 'z'
